--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Basic
-title: 韩俊强的博客
-subtitle: 爱折腾 - 乐于折腾 - 享受折腾
-KeyWords: 韩俊强的博客 iOS开发实战 Swift开发
-description: iOS开发者QQ群：446310206 
+title: TimeCost的博客
+subtitle: 爱世界 - 爱国家 - 爱人民
+KeyWords: TimeCost的博客 天下 人生
+description: 交流QQ群：暂无 
 # 头像里面的标题
-avatarTitle: HaRi
+avatarTitle: QuickSand
 # 头像里面的描述
 avatarDesc: iOS & Swift
 url: "http://blog26.com"
