--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: 交流QQ群：暂无
 avatarTitle: QuickSand
 # 头像里面的描述
 avatarDesc: iOS & Swift
-url: "http://blog26.com"
+url: "https://avatars.githubusercontent.com/u/82870005?v=4"
 
 # Comment
 comment:
