--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ comment:
 
 # Social
 social:
-    weibo: hanjunqiang
-    github: xiaohange
+    weibo: TimeCost
+    github: TimeCost
     # twitter: 
-    mail: 532167805@qq.com
+    mail: xinhuodeai@163.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
