--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "https://avatars.githubusercontent.com/u/82870005?v=4"
 
 # Comment
 comment:
-    disqus: han-jun-qiang-de-bo-ke
+    disqus: Time-Cost-QuickSand-de-bo-ke
     # duoshuo: xiaohange 
     # yungentie: http://noneless.tk
 
