--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: 交流QQ群：暂无
 # 头像里面的标题
 avatarTitle: QuickSand
 # 头像里面的描述
-avatarDesc: iOS & Swift
+avatarDesc: 风景 & 景色
 url: "https://avatars.githubusercontent.com/u/82870005?v=4"
 
 # Comment
