--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social:
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
- baidu-analysis：1c24a71a37dd2395e5d7c9257ee3b0ea
+ baidu.id：1c24a71a37dd2395e5d7c9257ee3b0ea
      #id: 
 
 # Google Analytics
